[package]
name = "handlebars"
version = "4.1.3-alpha.0"
authors = ["Ning Sun <sunng@pm.me>"]
description = "Handlebars templating implemented in Rust."
license = "MIT"
keywords = ["handlebars", "templating", "web"]
categories = ["template-engine", "web-programming"]
homepage = "https://github.com/sunng87/handlebars-rust"
repository = "https://github.com/sunng87/handlebars-rust"
documentation = "https://docs.rs/crate/handlebars/"
readme = "README.md"
edition = "2018"

[lib]
name = "handlebars"
path = "src/lib.rs"

[[bin]]
name = "handlebars-cli"
path = "src/cli.rs"

[dependencies]
log = { version = "0.4.0" }
quick-error = "2.0"
pest = "2.1.0"
pest_derive = "2.1.0"
serde = "1.0.0"
serde_json = "1.0.39"
walkdir = { version = "2.2.3", optional = true }
rhai = { version = "1", optional = true, features = ["sync", "serde"] }

[dev-dependencies]
env_logger = "0.9"
maplit = "1.0.0"
serde_derive = "1.0.75"
tempfile = "3.0.0"
criterion = "0.3"
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.19", features = ["serde"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.5", features = ["flamegraph", "protobuf"] }

[features]
dir_source = ["walkdir"]
script_helper = ["rhai"]
no_logging = []
default = []

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
features = ["dir_source", "script_helper"]
rustdoc-args = ["--cfg", "docsrs"]
